# webserv

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  Server.cpp  Server.hpp  docker-compose.yml  epoll_test.sh  main.cpp  myServer.cpp  myServer.hpp  todo.txt
Cookies/: Cookies.cpp
Request/: parseRequest.cpp  parseRequest.hpp  utilsRequest.cpp
Response/: Response.cpp  header.cpp  utils.cpp
cgi-bin/: delete.sh  delete_file.sh  files.sh  form.py  openImage.pl  seeFile.sh  test.py  testform.py  testup.py  upload.py
configs/: test.conf
htmls/: form.html  index.html  upload.html
inc/: Cgi.h  CgiHandler.hpp  Config.hpp  ParseRequest.hpp  Response.hpp  Server.hpp  Utils.hpp  VirtualHost.hpp  WebServ.hpp  cgiHandler.h  defines.hpp  parseRequest.hpp  response.h  utils.hpp
includes/: Cgi.h  cgiHandler.h  response.h
logdir/: tmprr78u3q8.html
src/: CGI.cpp  Cgi.cpp  cgiHandler.cpp  main.cpp  response.cpp
src/CGI/: CgiHandler.cpp  ReadFromCGI.cpp
src/Config/: Config.cpp
src/Cookies/: Cookies.cpp
src/Request/: ParseRequest.cpp  UtilsRequest.cpp
src/Response/: Header.cpp  Response.cpp  Utils.cpp
src/Server/: Server.cpp
src/Utils/: FdManagement.cpp  StructUtils.cpp
src/VirtualHost/: VirtualHost.cpp
src/Webserv/: WebServ.cpp
src/config/: Config.cpp
src/server/: Server.cpp
src/utils/: fdManagement.cpp  structUtils.cpp
src/virtualHost/: VirtualHost.cpp
src/webserv/: WebServ.cpp
test/: defines.h  mah  main.cpp  webPoll.cpp  webPoll.h  webSocket.cpp  webSocket.h
tests/: exceptionTest.cpp  pollServ.cpp  test.cpp
www/: form.html  index.html  merda.html  merde.html  upload.html
www/html/: about.html  index.html  nope.html
www/testing/: index.html
www/uploads/: index.html
